# BUPT-AI

./: .gitattributes  .gitignore  CLAUDE.md  README.md
22_fall/C-C++程序设计与编程方法/作业/: 练习题2.docx  练习题4类和继承.docx
22_fall/人工智能导论/作业/: 2022219101班 2022211733号 王殿云《人工智能导论》期末作业.doc  2022219101班+2022211733号+王殿云（1）.doc  2022219101班+2022211733号+王殿云（3）.docx  2022219101班+2022211733号+王殿云（4）.docx  2022219101班+2022211733号+王殿云（5）.docx
22_fall/军事理论/作业/: 中国在维护世界和平中的贡献.docx  作业题目1+王殿云+2022211733.docx
22_fall/大学与大学学习/作业/: 大学之源——创新.docx  大学学霸.docx  我是如何设定课程学习目标的.docx  论道——大学之道 王殿云 2022211733 人工智能学院22级1班.docx
22_fall/大学生心理健康/作业/: 心理论文.docx
22_fall/思想道德与法治/作业/: 2022219101+2022211733+王殿云.docx  2022219101+王殿云+2022211733.docx
22_fall/社会主义发展史/作业/: 2022219101+202221173+王殿云.docx  德国西里西亚工人起义.docx
23_fall/人工智能导论实践/作业/: 2022211733_王殿云 .docx
23_fall/数字逻辑与数字系统/作业/: 00-实验报告模板.docx  03-实验报告.docx  04-实验报告.docx
23_fall/数字逻辑与数字系统/考题/: 数字逻辑答案.docx
23_fall/数学建模与模拟/作业/: 建模求解.docx  生殖遗传.docx  第一题.md  遗传现象的通信理论描述 - 副本.docx  问题一.docx
23_fall/数据结构与算法课程设计/课设/: 作业一_2022211733_王殿云.docx  作业二_2022211733_王殿云 .docx
23_fall/概率论与数理统计/作业/: 中心极限定理的希尔伯特空间解释方法.docx
23_fall/马克思主义基本原理/作业/: 期中论文.docx  青年学思.docx
23_spring/中国近现代史纲要/作业/: 《西行漫记》读后感.docx
24_fall/软件工程/作业/: 教材课后习题.docx  软件工程作业一.docx
24_fall/软件工程/考题/: 2009-2010软工期末试题-A卷-附答案.doc  2010-2011期中.doc  2014年北邮如软件工程复习提纲.docx  2022软件工程期中.docx  北邮 2009-2010 期末试题 a卷 《软件工程》期末考试试题a 卷.docx  复习指南.md  软件工程期末复习-北邮.docx
24_fall/软件工程/课件/: 08.面向对象设计.pptx  09.软件设计基础概念.pptx  10.软件的模块化及软件设计优化原则.pptx  11.软件测试.pptx  12.算法与算法方法-1 软工详细设计需要程序流程图.pptx  13.软件实现.pptx  15.软件维护及项目管理.pptx
24_spring/形式语言与自动机/作业/: 形式语言第一次作业.docx
24_spring/数学建模/作业/: DNA复制.docx  DNA表达.docx  数学建模期末考试+2022211733+王殿云.docx  生物群落.docx  遗传现象的通信理论描述.docx
24_spring/机器智能/作业/: ScorpionAPE.docx  期中调研.md
24_spring/机器智能课程设计/课设/: README.md
24_spring/模式识别与机器学习/作业/: Experiment_MaxEnt.txt  HomeWork7.md  PRML Homework 1st.docx  PRML Homework 2nd.docx
24_spring/模式识别与机器学习/复习资料/: 题型梳理.docx  题型梳理.md
24_spring/毛泽东思想和中国特色社会主义理论体系概论/复习资料/: 毛概按会议整理.md  毛概按章节整理.md  毛概按著作整理.md  毛概背诵自查.md
25_spring/LINUX操作系统/作业/: 2025-2-28-2022219107-2022211733-王殿云.doc  2025-3-07-2022219107-2022211733-王殿云.doc  2025-3-14-2022219107-2022211733-王殿云.doc  2025-3-21-2022219107-2022211733-王殿云.doc  2025-3-28-2022219107-2022211733-王殿云.doc  2025-4-11-2022219107-2022211733-王殿云.doc  2025-4-18-2022219107-2022211733-王殿云.doc  2025-4-27-2022219107-2022211733-王殿云.doc  2025-5-16-2022219107-2022211733-王殿云.doc  2025-5-23-2022219107-2022211733-王殿云.doc  2025-5-9-2022219107-2022211733-王殿云.doc  linux大作业-王殿云-2022219107-2022211733.docx
25_spring/嵌入式系统设计与应用/实验/: main2.c  main5.c  server.c  嵌入式MiniQQ系统详细设计说明书.docx
25_spring/自然语言处理/课设/: README.md
25_spring/计算机视觉/作业/: 实验报告.docx
25_spring/计算机视觉/作业/2022211733_王殿云_第一次作业/2022211733_王殿云_第一次作业_实验代码/canny_cpp/: CMakeLists.txt  canny.cpp  canny.h  main.cpp  python_bindings.cpp  setup.py
26_spring/毕业设计/模板与规范/: 北京邮电大学2026届本科毕业设计（论文）撰写指导手册-信通、电子、计算机、人工智能、网安、智工.docx
26_spring/毕业设计/论文/: 定稿论文-匿名版.docx  定稿论文-普通版.docx
26_spring/毕业设计/过程材料/: 1-王殿云-毕设任务书.docx
docs/: CONTRIBUTING.md
docs/messages/: README.md
(+794 files in other folders)
